<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@string/pref_default_smoothie_host"
        android:inputType="textUri"
        android:key="smoothie_host"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_smoothie_host" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="@string/pref_default_machine_type"
        android:entries="@array/pref_machine_type_titles"
        android:entryValues="@array/pref_machine_type_values"
        android:key="machine_type"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_machine_type" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_x_velocity"
        android:inputType="number"
        android:key="x_velocity"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_x_velocity" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_y_velocity"
        android:inputType="number"
        android:key="y_velocity"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_y_velocity" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_z_velocity"
        android:inputType="number"
        android:key="z_velocity"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_z_velocity" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="show_codes"
        android:title="Show G-codes sent to Smoothie" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="burn_move"
        android:title="Burn when moving" />

    <EditTextPreference
        android:defaultValue="50"
        android:inputType="number"
        android:key="laser_power"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="Laser Power (%)" />

</PreferenceScreen>
